--- a/JAVA/EE/SpringCloud/spring-cloud-alibaba/01_服务注册与发现.md
+++ b/JAVA/EE/SpringCloud/spring-cloud-alibaba/01_服务注册与发现.md
@@ -4,13 +4,15 @@
 
 - [Nacos](https://nacos.io/zh-cn/)
 
-## 下载安装
+## 从源码安装
+
+>注意从源码安装要选择master分支的源码,稳定性要好,遇到问题,可以切换版本的TAG,一般打成TAG意味着是稳定的.
 
 ```shell
 # 下载源码
 git clone https://github.com/alibaba/nacos.git
 
-# 安装到本地仓库
+# 安装到本地仓库(-P指的是profile,这里是使用release环境)
 cd nacos/
 mvn -Prelease-nacos clean install -U
 
@@ -28,6 +30,14 @@ startup.cmd
 # 注：从 0.8.0 版本开始，需要登录才可访问，默认账号密码为 nacos/nacos
 ```
 
+## 从Dcker安装
+
+
+
 ## 附：Nacos Starter 更多配置项信息
 
 <table><thead><tr><th>配置项</th> <th>Key</th> <th>默认值</th> <th>说明</th></tr></thead> <tbody><tr><td>服务端地址</td> <td>spring.cloud.nacos.discovery.server-addr</td> <td>无</td> <td>Nacos Server 启动监听的ip地址和端口</td></tr> <tr><td>服务名</td> <td>spring.cloud.nacos.discovery.service</td> <td>${spring.application.name}</td> <td>给当前的服务命名</td></tr> <tr><td>权重</td> <td>spring.cloud.nacos.discovery.weight</td> <td>1</td> <td>取值范围 1 到 100，数值越大，权重越大</td></tr> <tr><td>网卡名</td> <td>spring.cloud.nacos.discovery.network-interface</td> <td>无</td> <td>当IP未配置时，注册的IP为此网卡所对应的IP地址，如果此项也未配置，则默认取第一块网卡的地址</td></tr> <tr><td>注册的IP地址</td> <td>spring.cloud.nacos.discovery.ip</td> <td>无</td> <td>优先级最高</td></tr> <tr><td>注册的端口</td> <td>spring.cloud.nacos.discovery.port</td> <td>-1</td> <td>默认情况下不用配置，会自动探测</td></tr> <tr><td>命名空间</td> <td>spring.cloud.nacos.discovery.namespace</td> <td>无</td> <td>常用场景之一是不同环境的注册的区分隔离，例如开发测试环境和生产环境的资源（如配置、服务）隔离等。</td></tr> <tr><td>AccessKey</td> <td>spring.cloud.nacos.discovery.access-key</td> <td>无</td> <td>当要上阿里云时，阿里云上面的一个云账号名</td></tr> <tr><td>SecretKey</td> <td>spring.cloud.nacos.discovery.secret-key</td> <td>无</td> <td>当要上阿里云时，阿里云上面的一个云账号密码</td></tr> <tr><td>Metadata</td> <td>spring.cloud.nacos.discovery.metadata</td> <td>无</td> <td>使用 Map 格式配置，用户可以根据自己的需要自定义一些和服务相关的元数据信息</td></tr> <tr><td>日志文件名</td> <td>spring.cloud.nacos.discovery.log-name</td> <td>无</td> <td></td></tr> <tr><td>接入点</td> <td>spring.cloud.nacos.discovery.enpoint</td> <td>UTF-8</td> <td>地域的某个服务的入口域名，通过此域名可以动态地拿到服务端地址</td></tr> <tr><td>是否集成 Ribbon</td> <td>ribbon.nacos.enabled</td> <td>true</td> <td>一般都设置成 true 即可</td></tr></tbody></table>
+
+# 附录
+
+元数据: 数据的数据,电影是数据,描述电影长度的数据就是元数据.
