--- a/Docker/01.0_Docker-quick-start.md
+++ b/Docker/01.0_Docker-quick-start.md
@@ -25,6 +25,8 @@ $ docker version
 
 # 配置 Docker 镜像加速器
 
+- [配置镜像加速说明](https://yeasy.gitbooks.io/docker_practice/content/install/mirror.html)
+
 ![](pics/Docker镜像加速器01.png)
 ![](pics/Docker镜像加速器02.png)
 ![](pics/Docker镜像加速器03.png)
@@ -32,6 +34,19 @@ $ docker version
 ![](pics/Docker镜像加速器05.png)
 ![](pics/Docker镜像加速器06.png)
 ![](pics/Docker镜像加速器07.png)
+
+>/etc/docker/daemon.json
+
+```shell
+{
+  "registry-mirrors": [
+    "https://dockerhub.azk8s.cn",
+    "https://reg-mirror.qiniu.com",
+    "https://registry.docker-cn.com",
+    "https://docker.mirrors.ustc.edu.cn"
+  ]
+}
+```
 
 # Docker常用命令
 
