--- a/JAVA/core/src/main/resources/JVM/1.2_JVM对象分代内存划分与垃圾回收.md
+++ b/JAVA/core/src/main/resources/JVM/1.2_JVM对象分代内存划分与垃圾回收.md
@@ -1,26 +1,6 @@
 # JVM对象分代内存划分与垃圾回收
 
-下面我们从对象分代年龄的角度对JVM内存进行划分，这与JVM的垃圾回收息息相关.
-
-对象没有引用的时候称为垃圾，垃圾回收器就会进行垃圾回收。
-
-有些对象会频繁的创建与销毁，例如我们在方法里面使用到局部变量，每次调用，方法里的局部变量就要经历创建与销毁的过程
-
-而另外一些对象可能会常驻内存，例如静态成员变量。
-
----
-
-    来自IBM的一组统计数据：
-    
-    98％的java对象，在创建之后不久就变成了非活动对象；只有2％的对象，会在长时间一直处于活动状态。
-    
-    如果能对这两种对象区分对待，那么会提高GC的效率。在sun jdk gc中（具体的说，是在jdk1.4之后的版本），提出了不同生命周期的GC策略。
-
----
-
->现在我们从另外一个角度对JVM的运行时内存进行划分：堆(Heap)堆和非堆(Non-heap)内存
-
- 按照官方的说法：“Java 虚拟机具有一个堆，几乎所有类实例和数组的内存均从此处分配。堆是在 Java 虚拟机启动时创建的。”“在JVM中堆之外的内存称为非堆内存(Non-heap memory)”。
+对象没有引用的时候称为垃圾.
 
 ## 一、基于对象分代年龄的内存划分
 
@@ -81,7 +61,7 @@ Full GC要对整个Heap区进行回收，包括New、Old和PermGen，所以比Mi
 
 为对象定义年龄计数器，对象在 Eden 出生并经过 Minor GC 依然存活，将移动到 Survivor 中，年龄就增加 1 岁，增加到一定年龄则移动到老年代中。
 
--XX:MaxTenuringThreshold 用来定义年龄的阈值。
+-XX:MaxTenuringThreshold 用来定义年龄的阈值
 
 ### 4. 动态对象年龄判定
 
