--- a/JAVA/core/src/main/resources/并发编程/2.0-Java并发编程基础API/2.9-守护线程.md
+++ b/JAVA/core/src/main/resources/并发编程/2.0-Java并发编程基础API/2.9-守护线程.md
@@ -1,29 +1,15 @@
-在Java中有两类线程：
+# Java线程分类
 
-1. User Thread(用户线程)
-2. Daemon Thread(守护线程)
+- User Thread(用户线程/前台线程): 运行在前台，如程序的主线程
+- Daemon Thread(守护线程): 一旦所有用户线程都结束运行，守护线程会随JVM一起结束工作
 
-Daemon的作用是为其他线程的运行提供服务,其实User Thread线程和Daemon Thread守护线程本质上没啥区别，唯一的区别之处在于如果User Thread全部撤离，那么Daemon Thread也就没啥线程好服务的了.
+# 守护线程的作用?
 
-设置守护线程的方法:
-```java
-Thread t = new Thread("daemon thread");
-t.setDaemon(true);//设置守护线程
-t.start();
-```
+    Daemon的作用是为User Thread服务,其实User Thread线程和Daemon Thread守护线程本质上没啥区别，
+    唯一的区别之处在于如果User Thread全部撤离，那么Daemon Thread也就没啥线程好服务的了.
 
-有几点需要注意:
+# 如何设置守护线程
 
-1. thread.setDaemon(true)必须在thread.start()之前设置，你不能把正在运行的常规线程设置为守护线程，否则会抛出一个IllegalThreadStateException异常。
-2. 在Daemon线程中产生的新线程也是Daemon的。
-4. JVM会在所有执行的线程都是守护线程的时候退出。
+# 守护线程的具体应用
 
->JRE判断程序是否执行结束的标准是所有的前台执线程行完毕了，而不管后台的daemon线程的状态，因此，在使用后台线程候一定要注意这个问题。 
-
-### Daemon线程的实际应用
-
-以一个web服务器为例，通常有一个`调度线程，用来接受用户的请求`，然后`将请求转发给工作线程来完成`。这里`工作线程是完成实际工作的，如果所有的工作线程都停止了，调度线程也就没有存在的必要了`，因此，`调度线程可以设置为守护线程`。
-
-## ThreadGroup
-
- ThreadGroup在实际开发中使用的较少。
+- **最常见的守护线程：** 垃圾回收线程
