--- a/JAVA/core/src/main/resources/JVM/JDK自带命令/4.3_jmap.md
+++ b/JAVA/core/src/main/resources/JVM/JDK自带命令/4.3_jmap.md
@@ -8,12 +8,11 @@
     
     jmap -heap pid 映射(打印)jvm堆快照 (显示的比较人性化,可以看到每个区的具体值)
     
->抓取堆内存,生成hprof文件并下载到本地
-    
     jmap -dump:file=xxx pid  手工dump内存到本地文件
     (就可以堆的信息给dump到机器上了,如果想要查看这个堆信息的话,需要下载专门的工具才能查看这个堆信息,
     一般在线上运行的时候,可以直接先把内存信息dump下来,然后我们下载这个dump文件,然后用专门的图形化工具来分析内存专用状态到底是什么样的)
 
+---
 
     jmap -histo 8520 > ./log.txt
     信息包括类名，对象数量，对象占用大小
@@ -34,5 +33,14 @@
     
     jmap -histo:live 8520 > ./log.txt
     live参数: 只dump当前存活的对象，如果不指定，将会dump所有的对象，包括待回收的对象
-    如果指定live，在统计前会进行full gc，因此不加live的堆大小要大于加live堆的大小
-    
+    如果指定live，在统计前会进行FGC，因此不加live的堆大小要大于加live堆的大小
+
+# 内存溢出时，自动保存dump文件
+
+    前面是手工导出内存dump映射文件，如果应用已经在线上运行，为了能获取应用出现oom时获得heap dump文件，
+    以便在之后分析，可以在JVM启动时指定参数：-XX:+HeapDumpOnOutOfMemoryError，JVM会在遇到OutOfMemoryError时
+    保存一个“堆内存快照”，并将其保存在一个文件中。 文件路径通过-XX:HeapDumpPath指定。
+
+    设置虚拟机参数为： -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=C:/Users/xu/Desktop/dump.hprof
+
+    生成了文件之后，就可以通过MAT打开来进行分析    
