--- a/JAVA/core/src/main/resources/JVM/JDK自带命令/4.7_jvisualvm.md
+++ b/JAVA/core/src/main/resources/JVM/JDK自带命令/4.7_jvisualvm.md
@@ -9,20 +9,22 @@
     正式的一个应用去部署运行的时候,一般都是在linux上,是没有界面的,所以一般是先使用jmap先把内存的信息给dump下来,
     然后拷贝这个dump文件然后到图形化界面中查看对象占用内存的信息.然后再进一步去分析程序.
 
-在oom的时候,自动dump内存信息
-
- -Xms8m -Xmx8m -XX:+PrintGCDetails -XX:+HeapDumpOnOutOfMemoryError
-
     最重要的是jmap指令,要学会使用这个命令dump堆的信息.
     并且学会使用visualvm来查看内存信息.
 
-右上角的"堆dump"会在远程主机上，dump一个内存映射文件，之所以不直接dump到本地，主要是因为这个文件通常比较大，直接dump到本地会很慢。dump完成之后，可以手工下载这个文件，通过"文件"->"装入"来进行分析，不过我们一般还是使用mat来进行分析，不会使用这个功能。
+![](../pics/jvisualvm-overview.png)
 
-线程选项卡列出了所有线程的信息，并使用了不同的颜色标记，右下角的颜色表示了不同的状态。点击右上角的线程dump会直接把线程信息dump到本地，相当于调用了jstack pid命令
+![](../pics/jvisualvm-Monitor.png)
 
-# 启动Jvisiualvm
+![](../pics/使用jvisualvm来查看hprof文件.png)
 
-    启动很简单，直接在命令行中输入"jvisualvm"即可
+![](../pics/jvisualvm-Threads.png)
+
+# 安装运行
+
+- [介绍](https://docs.oracle.com/javase/8/docs/technotes/guides/visualvm/intro.html)
+- [发行](https://visualvm.github.io/releases.html)
+- [下载](https://visualvm.github.io/download.html)
 
 # 一个主机支持远程监控
 
