--- a/JAVA/core/src/main/resources/JVM/tomcat优化/05_ab压力测试工具的使用.md
+++ b/JAVA/core/src/main/resources/JVM/tomcat优化/05_ab压力测试工具的使用.md
@@ -4,6 +4,10 @@
 
 ![](../pics/apache的ab压力测试.png)
 
+    通过压力测试，就可以知道当前的服务器硬件配置和软件配置的最大能支撑多少用户的访问
+    
+    量化服务器的能够支持的上限以及当访问量大的时候，验证程序的代码是否有问题，发现程序的潜在问题。
+
 # 下载安装ab
 
 ```shell script
@@ -69,6 +73,11 @@ vim conf/server.xml
 # n: number,总共访问的数量
 # c: concurrent,每次访问的并发
 # 意思就是总共发1000个请求,并发为100,也就是分成10组.
+
+# 查看其他可用参数
+./ab -h
+# 默认是使用GET方法来请求，如果是post请求，需要使用-p参数指定上传的文件
+# 使用-T指定content-type
 ```
 
 ![](../pics/ab访问tomcat压力测试健康报告解读.png)
@@ -119,11 +128,14 @@ Total transferred:      11297000 bytes
 # html的传输的大小
 HTML transferred:       11151000 bytes
 # 这个网站的吞吐量,也就是每秒能响应的请求数,这里说明每秒tomcat能处理427.28个请求
+# 注意这个只是代表访问这个页面的性能，不代表所有页面的性能
+# 不同页面性能不同，不同的页面完成的操作，功能都不一样，所以性能会有区别
 Requests per second:    427.28 [#/sec] (mean)
 # 服务器收到请求,响应页面要花费多长时间,这里说的是并发的100个请求的总时间
 Time per request:       234.037 [ms] (mean)
 # 也就是100个并发的情况下,并发的每个请求平均消耗的时间,也就是大概每次2.34毫秒你就可以看到网页了
 Time per request:       2.340 [ms] (mean, across all concurrent requests)
+# 传输速率（带宽的速度）
 Transfer rate:          4713.88 [Kbytes/sec] received
 
 Connection Times (ms)
