--- a/JAVA/core/src/main/resources/并发编程/2.0-Java并发编程基础API/1.1-创建并运行Java线程.md
+++ b/JAVA/core/src/main/resources/并发编程/2.0-Java并发编程基础API/1.1-创建并运行Java线程.md
@@ -1,4 +1,4 @@
-## 主线程
+# 主线程
 
 每个进程至少有一个线程，作为程序的入口，通常情况下这个线程我们称之为主线程,在Java中，程序的入口是主线程的main方法.
 
@@ -7,6 +7,8 @@
 我们创建了线程对象之后，其仅仅就是Java中的对象而已，只有调用了其start()方法，其才能成为一个真正意义上运行的线程.
 
 ## 线程是抢占式运行的
+
+    线程是抢占式的抢占cpu执行
 
 这是因为线程的运行是"抢占式"的。CPU在不同的线程切换过程中，CPU并不是按顺序来主义调度这些线程(不是交替运行的,是抢占式的).我们不知道在每次运行的时候哪个线程会在CPU上运行。在极端的情况下，可能会出现一个线程先运行完成后，再去执行另一个线程。
 
