--- a/JAVA/core/src/main/resources/并发编程/7.0-java并发包--线程池/7.2-线程池的7大核心参数.md
+++ b/JAVA/core/src/main/resources/并发编程/7.0-java并发包--线程池/7.2-线程池的7大核心参数.md
@@ -48,6 +48,11 @@
     cpu密集: 类似于 while(true)死循环一直占用cpu,大型队列和小型池可以最大限度地降低操作系统上下文切换开销,适用于cpu密集型业务
     io密集: 有很多io操作,比如去数据库的磁道上取数据,如果任务频繁阻塞（I/O操作比较多）,比较适合使用小型队列和较大的池
 
+---
+
+    有时候,创建线程池的核心线程数和最大线程数是一样的，导致一些空闲的线程也得不到回收,这样会有很多无意义的资源消耗。
+    所以也可以结合业务将线程池的核心线程数和最大线程数方式调整一下，将线程数降下来,使系统资源更合理的利用.
+
 ## 线程池常用任务队列(workQueue)的种类和特点
     
     有界队列有助于防止资源耗尽
