learn cas and AtomicInteger

--- a/JAVA/core/src/main/resources/JVM/JDK自带命令/4.0_性能监控工具.md
+++ b/JAVA/core/src/main/resources/JVM/JDK自带命令/4.0_性能监控工具.md
@@ -22,4 +22,10 @@
     
     java -cp ./ a.b.c.T
     指定类路径,如果不指定类路径,就需要配置CLASSPATH
+
+# javap
+
+    反编译字节码: 
     
+    javap -c xx.class
+    javap -verbose xx.class
