--- a/JAVA/core/src/main/resources/并发编程/2.0-Java并发编程基础API/1.1-创建并运行Java线程.md
+++ b/JAVA/core/src/main/resources/并发编程/2.0-Java并发编程基础API/1.1-创建并运行Java线程.md
@@ -74,3 +74,9 @@
 类似于每个进程启动后，操作系统都要给其分配一定的内存类似，每一个线程启动后，进程也要给线程分配一定的内存，让其来保存自己的私有数据。JVM划分给`每个线程的内存区域称之为线程栈内存`。默认情况下，`栈内存的大小1M`。也就是说，`你每多启动一个线程，至少要多消耗1M的内存资源`。
 
 我们可以尝试编写一个程序，让它创建100个线程，这些线程什么事情都不做，只是在等待，然后看看这个程序在运行的时候占用了多少内存。
+
+# 并发和并行区别
+
+concurrent: 并发,高并发就是类似于秒杀,多个线程在某个时间段同时去访问同一个资源.
+
+parallel: 并行,各种事情并行去做,就是同一时刻并行的去做.一边听音乐,一边写论文
