--- a/JAVA/core/src/main/resources/并发编程/2.0-Java并发编程基础API/2.10_JMM内存模型.md
+++ b/JAVA/core/src/main/resources/并发编程/2.0-Java并发编程基础API/2.10_JMM内存模型.md
@@ -2,10 +2,7 @@
 
 ![](../pics/计算机硬件架构.png)
 
-    cpu的访问速度: 访问寄存器 > 缓存 > 主存.
-
-- 当一个CPU需要`读取主存时`，它会将主存的数据读到cpu高速缓存中。再将高速缓存中的数据读到cpu内部的寄存器中，然后再执行操作.
-- 当CPU需要将结果写回到主存中去时，它先会将内部寄存器的值刷新到高速缓存中，然后在某个时间点将值刷新回主存.
+    cpu的访问速度: cpu的寄存器 > cpu多级高速缓存 > 主主存 > 硬件
 
 # 总线
 
@@ -15,8 +12,7 @@
 
 ![](../pics/jmm内存模型.png)
 
-    多个线程操作同一个共享变量,不能直接操作主内存中的共享变量,而是要把共享变量拷贝到线程自己
-    的工作内存中,修改完之后,再写回到主内存中.
+    多个线程操作同一个共享变量,不能直接操作主内存中的共享变量,而是要把共享变量拷贝到线程自己的工作内存中,修改完之后,再写回到主内存中.
 
 ![](../pics/jmm数据8种原子操作.png)
 
