--- a/JAVA/core/src/main/resources/并发编程/2.0-Java并发编程基础API/2.13_可见性.md
+++ b/JAVA/core/src/main/resources/并发编程/2.0-Java并发编程基础API/2.13_可见性.md
@@ -1,3 +1,12 @@
+# 可见性定义
+
+    有多个线程操作主内存中的同一个变量,当某一个线程在自己的工作内存中修改完成之后,去写回给主物理内存以后,
+    能够及时通知其他线程,告诉它们这个值已经被修改了,这样及时通知的现象 就俗称jmm内存模型中的第一个重要特性: 可见性
+    
+    多个线程修改主内存中的一个值,一个线程修改了主内存中的值,其他线程马上获得通知,这个就是可见性.
+
+    通过synchronized或者volatile可以保证可见性.
+
 # volatile关键字是如何保证可见性的
 
     在单CPU的情况下，是不存在可见性问题的，如果是多CPU，可见性问题就会暴露出来
