--- a/JAVA/core/src/main/resources/并发编程/3.0-Java同步与锁/3.0.3-CAS原理.md
+++ b/JAVA/core/src/main/resources/并发编程/3.0-Java同步与锁/3.0.3-CAS原理.md
@@ -1,4 +1,6 @@
-# CAS原理
+# CAS是什么
+    
+    比较并交换
 
 ![](../pics/cas算法原理.png)
 
@@ -12,7 +14,9 @@
 
 ![](../pics/cas图解.png)
 
-# CAS
+# CAS底层原理
+
+    概括: 自旋+Unsafe类(靠的是Unsafe类的cpu指令原语来保证原子性)
 
     虽然JDK1.6对Synchronized做了优化，加入锁自旋特性减少系统线程切换导致的开销，
     几乎与ReentrantLock的性能不相上下，因此建议在能满足业务需求的前提下，优先使用Sychronized。
@@ -22,25 +26,36 @@
 ![](../pics/为什么要用CAS.png)
 
 ![](../pics/CAS原理分析01.png)
+
 ![](../pics/CAS原理分析02.png)
+
 ![](../pics/CAS原理分析03.png)
+
 ![](../pics/CAS原理分析04.png)
+
 ![](../pics/在java领域的广泛应用01.png)
+
 ![](../pics/在java领域的广泛应用02.png)
+
 ![](../pics/在java领域的广泛应用03.png)
+
 ![](../pics/在java领域的广泛应用04.png)
+
 ![](../pics/在java领域的广泛应用05.png)
 
 # CAS存在三大问题
 
 ![](../pics/cas存在的问题.png)
 
-- 问题1: ABA问题
-- 问题2: 循环时间长cpu开销大,CAS操作如果长时间不成功，会导致其一直自旋，给CPU带来非常大的开销
-- 问题3: 只能保证一个共享变量的原子操作。对多个共享变量操作时，CAS是无法保证操作的原子性的。
+    问题1: ABA问题
+    问题2: 循环时间长cpu开销大,CAS操作如果长时间不成功，会导致其一直自旋，给CPU带来非常大的开销
+    问题3: 只能保证一个共享变量的原子操作。对多个共享变量操作时，CAS是无法保证操作的原子性的,可以使用原子引用来解决
+
+# 原子引用
 
 ---
-    第三个问题: 可以利用`AtomicReference类`把多个共享变量合并成一个共享变量来操作
+    第三个问题: 可以利用AtomicReference类把多个共享变量合并成一个共享变量来操作
+    
     示例: org.java.core.base.concurrent.chapter3.AtomicReferenceDemo
 ---
 
