--- a/LINUX/查看端口占用.md
+++ b/LINUX/查看端口占用.md
@@ -1,32 +1,24 @@
-# 查看端口状态
+# 查看端口是否被占用的方法
 
-```shell
-netstat -tlpn | grep 800 # Check that the chosen port is already in use.
+```shell script
+# 方法1: 通过ps
+ps -ef | grep 8080
+ps -ef | grep tomcat
 
-# To see if a program or process is listening on a port, ready to accept a packet, use the netstat command.
-netstat -tulnp
+# 方法2: 通过netstat
+netstat -tulpn | grep 8080
 
-t – Show TCP
-u – Show UDP
-l – Show only listening processes (netstat can show both listening and all established connections, i.e. as a client too)
-n – Do not resolve network IP address names or port numbers
-p – Show the process name that is listening on the port
+# t – Show TCP,Display TCP sockets.
+# u – Show UDP,Display UDP sockets.
+# l – Show only listening processes (netstat can show both listening and all established connections, i.e. as a client too)
+# n – Do not resolve IP address names or port numbers
+# p – Show the process name that is listening on the port
 
-# To see if a program or process is listening on a port, ready to accept a packet, use the ss program.
-ss -nutlp
+# 方法3: 通过lsof(listen of)
+lsof -i:8080
+```
 
-t – Display TCP sockets.
-u – Display UDP sockets.
-l – Display listening sockets
-n – Do now try to resolve names
-p – Show process using socket
-
-#  查看当前系统的端口使用：
-netstat -an
-
-# 通过netstat命令观察tcp的socket连接信息
-netstat -an | grep 220.181.57.216
-
+```shell script
 # 查找某个文件相关的进程
 lsof /bin/bash
 
@@ -45,10 +37,6 @@ lsof -i
 
 # 列出所有tcp 网络连接信息
 lsof -i tcp
-
-# 列出谁在使用某个端口
-#see what application is listening on port 80
-lsof -i:3306
 
 # 列出某个用户的所有活跃的网络端口
 lsof -a -u test -i
